--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #f7e7ce;
+  background: #e5b990;
 }
 form {
   margin-top: 15px;
@@ -20,35 +20,17 @@ ul {
   padding: 0;
 }
 
-.container {
-  max-width: 600px;
-}
 .card.application {
   margin-top: 35px;
 }
-.card-body.structure-detail {
-  padding-bottom: 40px;
-  padding-left: 25px;
-  padding-right: 25px;
-  background: #ffe9c1;
+.weather-app {
+  background: #f7e7ce;
+  max-width: 600px;
+  margin: 45px auto;
+  padding: 40px;
+  box-shadow: 0 30px 50px rgba(56, 49, 41, 0.08);
 }
-.current-temperature {
-  position: relative;
-  left: 10px;
-}
-.units {
-  font-size: 20px;
-}
-.weather-details {
-  border: 1px solid #d2d2d2;
-  border-radius: 8px;
-  height: 170px;
-  max-width: fit-content;
-  padding: 15px;
-  position: relative;
-  left: 10px;
-  top: 40px;
-}
+
 .weekdays {
   position: relative;
   top: 15px;
