--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
   background: #e5b990;
+  font-family: "Comforter", cursive;
+  font-family: "Kalnia", serif;
+  font-family: "Raleway", sans-serif;
 }
 form {
   margin-top: 15px;
@@ -11,14 +14,12 @@ h1 {
   font-size: 25px;
 }
 
-.card.application {
-  margin-top: 35px;
-}
 .weather-app {
   background: #f7e7ce;
   max-width: 600px;
   margin: 45px auto;
   padding: 40px;
+  border-radius: 14px;
   box-shadow: 0 30px 50px rgba(56, 49, 41, 0.08);
 }
 
