Added form classes and applied css to classes

--- a/style.css
+++ b/style.css
@@ -4,16 +4,6 @@ body {
   font-family: "Kalnia", serif;
   font-family: "Raleway", sans-serif;
 }
-form {
-  margin-top: 15px;
-  position: relative;
-  left: 10px;
-}
-h1 {
-  margin-top: 10px;
-  font-size: 25px;
-}
-
 .weather-app {
   background: #f7e7ce;
   max-width: 600px;
@@ -21,6 +11,24 @@ h1 {
   padding: 40px;
   border-radius: 14px;
   box-shadow: 0 30px 50px rgba(56, 49, 41, 0.08);
+}
+
+form {
+  margin-top: 10px;
+  position: relative;
+  left: 5px;
+}
+.search-form-input {
+  width: 65%;
+}
+.search-form-button {
+  margin-left: 5px;
+  width: 75px;
+  background: #e5b990;
+}
+h1 {
+  margin-top: 10px;
+  font-size: 25px;
 }
 
 .weekdays {
