Added div class to html and updated css

--- a/style.css
+++ b/style.css
@@ -24,13 +24,16 @@ form {
 .search-form-button {
   margin-left: 5px;
   width: 75px;
-  background: #e5b990;
+  background: #ecd7bc;
 }
 h1 {
   margin-top: 10px;
   font-size: 25px;
 }
-
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
 .weekdays {
   position: relative;
   top: 15px;
