--- a/style.css
+++ b/style.css
@@ -26,13 +26,22 @@ form {
   width: 75px;
   background: #ecd7bc;
 }
-h1 {
-  margin-top: 10px;
-  font-size: 25px;
-}
+
 .weather-app-data {
   display: flex;
   justify-content: space-between;
+  padding: 10px 0 0 0;
+}
+.weather-city {
+  margin: 0;
+  font-size: 30px;
+  line-height: 68px;
+}
+
+.weather-details {
+  font-size: 14px;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.6);
 }
 .weekdays {
   position: relative;
@@ -41,9 +50,6 @@ h1 {
   border: none;
 }
 
-.col {
-  text-align: center;
-}
 footer {
   padding: 16px 0 0 0;
   font-size: 14px;
