--- a/style.css
+++ b/style.css
@@ -64,15 +64,18 @@ strong {
   margin-top: 20px;
   font-size: 30px;
 }
-.weekdays {
-  position: relative;
-  top: 15px;
-  background: #f7e7ce;
-  border: none;
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 20px 0 20px 0;
+  margin-top: 25px;
 }
-
+.forecast-temperature {
+  display: flex;
+}
 footer {
   padding: 16px 0 0 0;
+  margin-top: 25px;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.6);
   text-align: center;
