--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header {
 }
 
 .weather-details {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 500;
   line-height: 20px;
   color: rgba(0, 0, 0, 0.6);
@@ -70,8 +70,20 @@ strong {
   font-size: 30px;
 }
 
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.forecast-date {
+  font-size: 14px;
+}
 .forecast-temperature {
-  display: flex;
+  font-size: 14px;
+}
+.min-temp {
+  opacity: 0.6;
 }
 footer {
   border-top: 1px solid #f9f1f0;
