--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ strong {
 }
 
 .weather-forecast {
+  display: flex;
+  justify-content: space-evenly;
   margin-top: 20px;
   text-align: center;
   color: rgba(0, 0, 0, 0.6);
